# game-boy-emulator

./: CMakeLists.txt
inc/emulator/: apu.h  cartridge.h  common.h  cpu.h  emulator.h  joypad.h  mbc_controller.h  mmu.h  ppu.h  rom.h  timer.h
inc/gui/: mainwindow.h
src/: main.cpp
src/emulator/: apu.cpp  cartridge.cpp  common.cpp  cpu.cpp  cpu_instructions.cpp  emulator.cpp  joypad.cpp  mbc_controller.cpp  mmu.cpp  ppu.cpp  rom.cpp  timer.cpp
src/gui/: mainwindow.cpp  mainwindow.ui
